# constraint-rules

./: .gitignore  CHANGELOG.md  LICENSE  README.md  constraint-rules.cabal
src/Data/Constraint/: Rule.hs
src/Data/Constraint/Rule/: Bool.hs  Nat.hs  Plugin.hs  Symbol.hs  TH.hs  Trace.hs
src/Data/Constraint/Rule/Plugin/: Cache.hs  Definitions.hs  Equiv.hs  Message.hs  Prelude.hs  Rule.hs  Runtime.hs
test/Test/: IntroDefs.hs  IntroSpec.hs  SimplDefs.hs  SimplSpec.hs  Util.hs
